--- a/sn-article.tex
+++ b/sn-article.tex
@@ -224,6 +224,74 @@ Although both deviations from the intended intervention and dropout rates can po
 %
 %
 %
+\subsection*{Signalling question - 2.1}
+\label{subsec:2_1}
+%
+
+%
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/2_1.png}
+    \caption{Annotation instructions for the RoB 2.1 signalling question.}
+    \label{fig:2_1}
+\end{figure}
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/2_1_1.png}
+    \caption{Annotation instructions for the RoB 2.1 signalling question.}
+    \label{fig:2_1_1}
+\end{figure}
+%
+Blinding or masking of participants is an essential method to minimize the risk of bias due to participants' knowledge of their assigned intervention.
+When participants are not blinded, they may modify their behavior, expectations, or reports of outcomes, consciously or unconsciously, based on their knowledge of the assigned intervention, leading to a biased estimate of treatment effect.
+If blinding was applied to the participants, the risk of bias related to the knowledge of the assigned intervention is minimized.
+If participants were not blinded and were aware of their assigned intervention, this may increase the risk of bias and decrease the reliability of the study results.
+However, if blinding was successfully applied, this may decrease the risk of bias and increase the internal validity of the study.
+
+
+Following this explanation, the annotators are asked to find text description/sentence(s) stating that the participants could not distinguish (unaware / blinded) between the intervention and placebo.
+If the annotators found sentence(s) that describe intervention and placebo administration, then they are asked to annotate both parts – first part where intervention is described, and second part where proper participant blinding is described.
+Annotate these parts with the label ``2.1 No Good''.
+Proper blinding of participants involves concealing or disguising the intervention to ensure that the participants do not know which intervention they received.
+These are the proper methods of blinding.
+Use of placebo or sham interventions: In some rehabilitation trials, a placebo or sham intervention can be used to blind the participants and therapists to the assigned intervention. For example, in studies of manual therapy, a sham therapy such as light touch or a placebo intervention like ultrasound can be used to blind the participants.
+
+Use of standardized interventions: Standardized interventions can be used to ensure that all participants receive the same intervention regardless of the assigned group. This approach helps reduce the risk of bias and ensures that all participants receive the same level of care.
+
+Use of therapist blinding: In some rehabilitation trials, therapists can be blinded to the assigned intervention. This approach is particularly useful when the intervention involves physical contact with the participant. For example, in studies of physical therapy, therapists can be trained to provide the same level of care and attention to all participants, regardless of the assigned intervention.
+
+Use of remote monitoring: In some rehabilitation trials, interventions can be delivered remotely, using telehealth or other technology. This approach can help blind the participants and therapists to the assigned intervention.
+
+Use of masking techniques: In some rehabilitation trials, masking techniques can be used to conceal the intervention from the participants and therapists. For example, in studies of balance training, participants can be blindfolded to prevent them from seeing the type of training they are receiving.
+
+In summary, blinding in rehabilitation trials can be challenging, but several methods can be used to minimize the risk of bias due to the knowledge of the assigned intervention by the study participants and therapists. These methods include the use of placebo or sham interventions, standardized interventions, therapist blinding, remote monitoring, and masking techniques.
+
+
+
+Annotators are likely to find this information in the methods section.
+If the information is not found in the Methods section, but there are phrases in title saying ``placebo-controlled'', ``single-blind'', ``double-blind'', then mark these phrases with label ``2.1 No Good''.
+
+If you did not find any such information then did you find texts saying that the study is ``open-label'', or did you find a sentence mentioning there was no blinding, or participants were aware, or could not be blinded, or something along the lines of the sentences mentioned below, then annotate such sentences with the label ``2.1 Yes Bad''.
+1. Due to the nature of the intervention, it was not possible to blind the participants to their assigned group.
+2. The physical nature of the intervention made it impossible to blind the participants to their assigned group.
+3. Participants were not blinded to their assigned group as the intervention required direct physical contact and feedback from the therapist.
+4. Blinding of participants was not possible as the intervention involved active participation from the participants and required visual and physical feedback.
+5. The participants were aware of their assigned group as the nature of the intervention made it difficult to conceal the type of therapy being delivered.
+This information could be found either in Methods section or the abstract.
+
+If you think the intervention-comparator pair is incompatible or it is not possible to achieve blinding using the I/C pairs then annotate the phrases/words that gives information about I/C (names of intervention and comparator) with the label ``2.1 Probably Yes Bad''.
+For example, blinding may not be possible in studies where the intervention and control intervention pairs involve a clear difference in the type or frequency of therapy being delivered, such as surgical interventions, exercise interventions, behavioral interventions, educational interventions, and mind-body interventions.
+%
+%
+%
+\subsection*{Signalling question - 2.2}
+\label{subsec:2_2}
+%
+xOx
+%
+%
+%
 \subsection*{Signalling question - 2.3}
 \label{subsec:2_3}
 %
@@ -259,7 +327,7 @@ For annotation instructions for this signalling question, ``Were these deviation
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/2_4.jpg}
+    \includegraphics[width=\textwidth]{figures/2_4.png}
     \caption{Annotation instructions for the RoB 2.4 signalling question.}
     \label{fig:2_4}
 \end{figure}
