--- a/sn-article.tex
+++ b/sn-article.tex
@@ -342,7 +342,7 @@ For annotation instructions for this signalling question, ``Were these deviation
     \label{fig:2_4}
 \end{figure}
 %
-Do not annotate for this question if the answer to the previous question was ``2.3 No Good'' otherwise, follow the instructions below.
+Do not annotate for this question if the answer to the previous question was ``2.3 No Good''; otherwise, follow the instructions below.
 In randomized clinical trials, deviations from the planned study protocol may occur for various reasons, such as the participant not following the intervention as intended or the trial site not adhering to the study procedures.
 These deviations are known as "protocol deviations" or "protocol violations."
 The question "Were these deviations likely to have affected the outcome?" in the revised Cochrane RoB 2.0 tool refers to whether the protocol deviations had the potential to influence the study results.
@@ -350,10 +350,11 @@ The aim of this question is to assess the RoB due to the protocol deviations, wh
 If the deviations were unlikely to have affected the study outcome, then this question would be answered with "No."
 However, if the deviations were likely to have affected the study outcome, then this question would be answered with "Yes," indicating that the study is at high risk of bias.
 If it is unclear whether the deviations affected the outcome, the answer would be "Some concerns."
-To annotate the information from the previous question, we identify the percentage of deviation (a number) and annotate it, while for this question we look for the reasons for these deviations and annotate them.
+To annotate the information from the previous question, we identify the percentage of deviation (a number) and annotate it, while for this question, we look for the reasons for these deviations and annotate them.
 The reasons could be found in either the Results section or in the Method section if not in the Results section.
-If you identify the reason for this deviation and mark it then follow the path along ``yes'' and judge whether these deviations could affect the outcome.
+If you identify the reason for this deviation and mark it, then follow the path along ``yes'' and judge whether these deviations could affect the outcome.
 If they do, mark the annotated reason for deviation as ``2.4 Yes Bad'' and ``2.4 No Good''otherwise.
+For example, this sentence from Osteras 2019 Patient Reporting Quality of Care 6months IAA Hilfiker Sattelmayer with Protocol.pdf ... "['Two patients in the control group receiving physiotherapy (usual care) erroneously attended the PT-led education and exercise programme after their PT had attended the workshop.']" says that some participants went to different therapy "by error/mistake" which is a reason for the deviation, but as it was a small deviation, the annotator marked it as "no good".
 %
 %
 %
@@ -375,8 +376,10 @@ The question "Were these deviations from the intended intervention balanced betw
 Balanced deviations between groups are important for maintaining the internal validity of the study. If one group had a higher number or severity of deviations from the intended intervention than the other, it could potentially introduce bias and confound the results of the study. Therefore, it is important to assess whether deviations from the intended intervention were balanced between the groups when evaluating the risk of bias in an RCT.
 
 The first diamond in the flowchart asks the annotators to search for quantities of deviation with a thought bubble hinting to them that these deviations are not the dropout rate in the trial (to understand the difference between deviations and dropout, refer to subsection~\ref{subsec:2_3}).
+The main hook point is to identify quantities or numbers that show some kind of deviation from the intended intervention.
 If the deviations were balanced between the groups, mark the annotated deviations as ``2.5 Yes Good'' and ``2.5 No Bad'' otherwise.
 Now if you did not find any quantification of the deviations but found the text in the Discussion section saying that the deviations were not balanced, then mark such text in the discussion as ``2.5 No Bad''.
+If no text is marked, the document for this signalling question will be marked with a no information label.
 %
 %
 %
@@ -414,7 +417,10 @@ If the information is not found in the results section, mark the text in the tab
 If the information is to be found nowhere except in a flowchart, mark the caption of the flowchart.
 However, ensure that the flowchart annotation is your last resort.
 
-If you find it in the flowchart, mark the caption and also ``included n=XX for ITT''. % Unfortunately you cannot mark the flowchart because the new tool does not allow image annotation
+If you find it in the flowchart, mark the caption and also ``included n=XX for ITT''. % Unfortunately, you cannot mark the flowchart because the new tool does not allow image annotation
+
+Sometimes there could be disagreements here. Let's take for example, Solomons\_2020\_VISA\_A\_12months\_IAA\_Hilfiker\_Sattelmayer\_with\_Protocol.pdf where Martin marks "We did not impute or replace any missing values but rather fitted all the available data to the model" as No good. 
+However, what does the phrase "all the available data" mean? Maybe only 70\% of the outcomes data was available.
 %
 %
 %
