--- a/sn-article.tex
+++ b/sn-article.tex
@@ -455,11 +455,30 @@ If no sensitivity analysis was done then mark the sentence containing method use
 %
 \subsection*{Signalling question - 3.3 }
 %
-RoB 3.3 focuses on whether the missing data is related to the true value of the outcome. For example, if participants with higher or lower values of the outcome are more likely to drop out or have missing data, this could introduce bias. In this case, the missing data could depend on the true value of the outcome, and the results of the study could be biased.
+For annotation instructions for this signalling question, ``RoB 3.3 Could missingness in the outcome depend on its true value?'' follow the Flowchart~\ref{fig:3_3}.
+%
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/3_3.png}
+    \caption{Annotation instructions for the RoB 3.3 signalling question.}
+    \label{fig:3_3}
+\end{figure}
+%
 
-To answer this question, reviewers need to assess whether there is a potential relationship between the missing data and the true value of the outcome. This can be done by examining the reasons for missing data and analyzing whether the missing data is related to other participant characteristics or study factors.
+RoB 3.3 focuses on whether the missing data is related to the true value of the outcome.
+For example, if participants with higher or lower values of the outcome are more likely to drop out or have missing data, this could introduce bias.
+In this case, the missing data could depend on the true value of the outcome, and the results of the study could be biased.
+To answer this question, reviewers need to assess whether there is a potential relationship between the missing data and the true value of the outcome.
+This can be done by examining the reasons for missing data and analyzing whether the missing data is related to other participant characteristics or study factors.
+If the answer to RoB 3.3 is judged as "low risk of bias," it means that there is little risk that the missing data could have biased the study findings.
+If the answer is "high risk of bias," it means that there is a significant risk of bias due to missing outcome data, and the study results should be interpreted with caution.
 
-If the answer to RoB 3.3 is judged as "low risk of bias," it means that there is little risk that the missing data could have biased the study findings. If the answer is "high risk of bias," it means that there is a significant risk of bias due to missing outcome data, and the study results should be interpreted with caution.
+In order to annotator answer for this signalling question, the first diamond request the annotators to find the reasons for missing outcomes data.
+If you found the reason for missing outcomes data or not, go to the next diamond and which requests you to find and if found, mark the sentences that mention this outcome in the context of missingness.
+If this is an outcome that leads to missingness, then label the marked text as ``3.3 Yes Bad''.
+Otherwise, if no such sentences with missingness context were identified, then mark the sentence describing the outcomes assessed in the Methods section and mark the sentence.
+If this is an outcome that leads to missingness, then label the marked text as ``3.3 Yes Bad''.
+This is a theoretical question, the answer to which could be basically obtained just knowing what outcomes are being assessed in the RCT.
 %
 %
 %
