Generic guidelines detailed

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -92,22 +92,34 @@
 \section*{Generic annotation guidelines}
 \label{sec:generic}
 %
-In each of the following subsections, we describe the annotation guidelines for the signalling questions using the instructional placards developed through consultation with RoB assessment and natural language processing experts.
-
-Each placard is a flowchart encoding instructions to guide annotators in annotating the RoB question by question for the signalling questions in the Revised Cochrane RoB tool 2.0.
-The flowchart starts with the title informing the annotators of which question they are annotating for.
-The first diamond in the actual instructional flowchart asks the annotators to look for specific information or part of the text and, if found, instructs them to annotate it.
-There are little colour-coded arrows flanking the diamond instructing the annotators to first look for the information in the green arrow region (for e.g., in the Results section). 
-If the information is not found in the green-coded arrow, check for it in the yellow-coded arrow (e.g., a table or a flowchart).
-If for a particular question, no information is found, we assume that the text did not have any information for that particular signalling question.
-\textcolor{red}{Include a generic description about the colours, logos, shapes and flowchart elements in the placards here...}
+This section provides a comprehensive explanation of the structure of instructional placards and the general guidelines for using them effectively.
+The placards serve as a guide for annotators and are structured in a specific way to ensure consistent and accurate annotation of the Risk of Bias (RoB) questions.
+Each placard begins with a title that indicates the specific question being annotated.
+Following the title, a flowchart is provided to guide annotators through the process of annotating each RoB question based on the revised Cochrane RoB tool 2.0 (referred to as RoB 2.0 hereafter).
+The flowcharts consist of several components, including:
+%
+%
+%
+\begin{enumerate}
+    \item Diamond: Each flowchart contains diamond-shaped symbols that prompt annotators to search for specific information and ask decision-based questions. If the required information is found, instructions are provided on how to annotate it or guidance is given to proceed to the next diamond.
+    \item Parallelogram: The output answer to the decision-based question is represented by a parallelogram-shaped symbol. Annotators are instructed to assign a label associated with this symbol if the requested information is found.
+    \item Arrows: Color-coded arrows unilaterally flank the diamonds. These arrows provide instructions to annotators to first search for the required information in the full-text section suggested by the green arrow (e.g., Results or Methods section). If the information is not found in the green-coded arrow, they are instructed to check for it in the section suggested by the yellow-coded arrow (e.g., a table or a flowchart).
+    \item Thought bubble: Bubble-shaped text boxes, referred to as thought bubbles, contain comments that provide additional information, explanations, or instructions about specific steps or elements in the flowchart. These annotations are primarily coloured green but may also be red.
+\end{enumerate}
+%
+%
+%
+The placards also include additional instructions in the bottom left corner, specifying whether annotators should annotate full sentences or only phrases.
+In the following subsections, detailed annotation guidelines are provided for each signalling question (SQ), using the instructional placards developed in consultation with RoB assessment and natural language processing experts.
+It is important to note that these generic annotation guidelines are supplementary to the detailed guidelines in the subsequent subsections and should be used in conjunction with the original detailed RoB 2.0 guidelines.
 %
 %
 %
 \section*{Annotation Guidelines for RoB domain 1}
 \label{sec:dom1}
 %
-The first risk domain of bias in the revised Cochrane Risk of Bias (RoB) 2.0 tool is "Bias arising from the randomization process" which includes the subdomains "Random sequence generation" and "Allocation concealment". This domain assesses the potential for bias related to the randomization process, which is an important factor in reducing the risk of selection bias in randomized controlled trials (RCTs).
+The first risk domain in the revised Cochrane Risk of Bias (RoB) 2.0 tool is referred to as ``Bias stemming from the randomization process.'' It encompasses two subdomains: ``Random sequence generation'' and ``Allocation concealment.''
+This domain evaluates the likelihood of bias associated with the randomization process, a crucial element in mitigating potential selection bias in randomized controlled trials (RCTs).
 %
 %
 %
@@ -478,7 +490,37 @@ If you found the reason for missing outcomes data or not, go to the next diamond
 If this is an outcome that leads to missingness, then label the marked text as ``3.3 Yes Bad''.
 Otherwise, if no such sentences with missingness context were identified, then mark the sentence describing the outcomes assessed in the Methods section and mark the sentence.
 If this is an outcome that leads to missingness, then label the marked text as ``3.3 Yes Bad''.
-This is a theoretical question, the answer to which could be basically obtained just knowing what outcomes are being assessed in the RCT.
+This is a theoretical question, the answer to which could be basically obtained just by knowing what outcomes are being assessed in the RCT.
+%
+%
+%
+\subsection*{Signalling question - 4.1 }
+%
+
+%
+%
+%
+\subsection*{Signalling question - 4.2 }
+%
+Could measurement or ascertainment of the outcome have differed between intervention groups?
+%
+%
+%
+\subsection*{Signalling question - 4.3 }
+%
+
+%
+%
+%
+\subsection*{Signalling question - 4.4 }
+%
+
+%
+%
+%
+\subsection*{Signalling question - 4.5 }
+%
+
 %
 %
 %
