--- a/sn-article.tex
+++ b/sn-article.tex
@@ -125,7 +125,8 @@ This domain evaluates the likelihood of bias associated with the randomization p
 %
 \subsection*{Signalling question: 1.1}
 %
-Follow the Flowchart~\ref{fig:1_1} for annotation instructions of the signalling question, ``Was the allocation sequence random?''.
+%
+%
 %
 \begin{figure}[hbt]
     \centering
@@ -133,16 +134,22 @@ Follow the Flowchart~\ref{fig:1_1} for annotation instructions of the signalling
     \caption{Annotation instructions for the RoB 1.1 signalling question.}
     \label{fig:1_1}
 \end{figure}
-
 %
+%
+%
+Signalling question 1.1 ``Was the allocation sequence random?'' is used to assess the RoB related to the randomization process in a study.
+It aims to determine whether the allocation of participants to different groups or interventions was done in a random manner.
 If the allocation sequence is generated randomly, this reduces the risk of bias, as it ensures that the allocation is not influenced by the researchers' preferences or the participants' characteristics.
-Some of the good random allocation methods include Simple randomization (coin flipping, random number generator), stratified randomization, blocked randomization, cluster randomization, and adaptive randomization.
+Some of the good random allocation methods include simple randomization (coin flipping, random number generator), stratified randomization, blocked randomization, cluster randomization, and adaptive randomization.
 If the allocation sequence was not generated using a proper randomization method, this increases the risk of bias in the study.
 For e.g., if the allocation sequence was generated using a non-random method, such as alternating assignment or assignment based on participant characteristics, this could introduce bias into the study.
-Following this explanation, the first diamond in the flowchart~\ref{fig:1_1}, instructs the annotators to identify randomization method for allocation sequence and if a proper randomization method is found, mark the method (this should be a few words or a phrase and not a complete sentence) with ``1.1 Yes Good''.
+
+Follow the Flowchart~\ref{fig:1_1} for annotation instructions of the signalling question, ``Was the allocation sequence random?''.
+Following the above explanation, the first diamond in the flowchart instructs the annotators to identify the randomization method for allocation sequence, and if a proper randomization method is found, mark the method with ``1.1 Yes Good''.
 If the text describes a bad or improper method of randomization, mark the text with ``1.1 No Bad''.
-If you did not find any information about the randomization methodology, but found terms like ``random'', ``randomized trial'' or phrases like ``we did random allocation'', then mark such phrases with label ``1.1 No Information''.
-The information about random sequence allocation could be found in the methods section (first priority) or the abstract (second priority).
+This should be a few words or a phrase and not a complete sentence.
+If you did not find any information about the randomization methodology but if the terms like ``random'', ``randomized trial'' or phrases like ``we did random allocation'' are automatically detected, then such phrases will be marked with the label ``1.1 No Information''.
+The information about random sequence allocation can be found in the methods section (first priority) or the abstract (second priority).
 Notice that for this signalling question, the annotators are required to mark phrases rather than full sentences.
 %
 %
