--- a/sn-article.tex
+++ b/sn-article.tex
@@ -130,7 +130,7 @@ This domain evaluates the likelihood of bias associated with the randomization p
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/1_1.png}
+    \includegraphics[width=\textwidth]{figures/1_1.pdf}
     \caption{Annotation instructions for the RoB 1.1 signalling question.}
     \label{fig:1_1}
 \end{figure}
