--- a/sn-article.tex
+++ b/sn-article.tex
@@ -156,7 +156,7 @@ Notice that for this signalling question, the annotators are required to mark ph
 %
 \subsection*{Signalling question: 1.2}
 %
-``Was the allocation sequence concealed until participants were enrolled and assigned to interventions?'' focuses on assessing the risk of bias related to allocation concealment in a study. 
+The signalling question ``Was the allocation sequence concealed until participants were enrolled and assigned to interventions?'' focuses on assessing the risk of bias related to allocation concealment in a study. 
 In RCTs, the allocation sequence determines the order in which participants are assigned to each intervention group.
 Adequate concealment of the allocation sequence refers to the process of keeping the sequence hidden from those who are involved in enrolling and assigning participants to intervention groups.
 This helps to prevent the possibility of selection bias, which can occur if those enrolling participants in the trial have knowledge of the allocation sequence and can manipulate the assignment of participants to intervention groups based on that knowledge.
@@ -195,37 +195,37 @@ Notice that for this signalling question, too, the annotators are required to ma
 %
 \subsection*{Signalling question: 1.3}
 %
-Follow the Flowchart~\ref{fig:1_3} for annotation instructions of the signalling question, ``Did baseline differences between intervention groups suggest a problem with the randomization process?''.
-%
 
+The signalling question ``Did baseline differences between intervention groups suggest a problem with the randomization process?'' of the RoB 2 tool is related to the potential for bias arising from differences in baseline characteristics between intervention groups that are not related to chance and may suggest a problem with the randomization process.
+Even with good randomization, chance imbalances in baseline characteristics can occur leading to an ineffective randomization.
+For example, if the intervention group has significantly more female participants, older participants, or participants with more severe disease at baseline compared to the control group, this may suggest that the randomization process was not effective or that there was a problem with the allocation sequence.
+This can lead to biased estimates of treatment effects and decrease the internal validity of the study.
+So this question addresses whether any differences in baseline characteristics between intervention groups suggest that the randomization process was not effective.
+If there are significant differences in baseline characteristics between intervention groups that are not related to chance, this may suggest that the randomization process was not effective, and the reliability of the study results may be decreased.
+%
+%
+%
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/1_3.png}
+    \includegraphics[width=\textwidth]{figures/1_3.pdf}
     \caption{Annotation instructions for the RoB 1.3 signalling question.}
     \label{fig:1_3}
 \end{figure}
 
 %
-
-The bias assessed by the "Bias arising from baseline measurements" domain and subdomain ``Did baseline differences between intervention groups suggest a problem with the randomization process?'' of the revised Cochrane Risk of Bias (RoB) 2.0 tool is related to the potential for bias arising from differences in baseline characteristics between intervention groups that are not related to chance and may suggest a problem with the randomization process.
-Randomization is a critical aspect of RCTs because it helps to ensure that the intervention groups are comparable at baseline, meaning that any differences observed between groups after the intervention can be attributed to the intervention itself rather than other factors.
-However, even with randomization, chance imbalances in baseline characteristics can occur.
-The question addressed by this subdomain is whether any differences in baseline characteristics between intervention groups suggest that the randomization process was not effective.
-For example, if the intervention group has significantly more female participants, older participants, or participants with more severe disease at baseline compared to the control group, this may suggest that the randomization process was not effective or that there was a problem with the allocation sequence.
-This can lead to biased estimates of treatment effects and decrease the internal validity of the study.
-Therefore, the Cochrane RoB 2.0 tool assesses the potential for bias arising from baseline differences between intervention groups to help determine the risk of bias related to the randomization process.
-If there are significant differences in baseline characteristics between intervention groups that are not related to chance, this may suggest that the randomization process was not effective, and the reliability of the study results may be decreased.
-
-
+%
+%
+Follow the Flowchart~\ref{fig:1_3} for annotation instructions of the signalling question, ``Did baseline differences between intervention groups suggest a problem with the randomization process?''.
 The text describing answer to this question is typically found in the table describing demographic and clinical baseline characteristics of study participants.
-If the table for baseline patient characteristics show excessive similarity or dissimilarity in the baseline characteristics that ARE NOT compatible with chance then mark the full table with label ``1.3 Yes Bad'' other mark the full table and the table caption with label ``1.3 No Good''.
-If you did not find any table describing the baseline patient characteristics then the study will be ultimately assumed as ``1.3 No Information''.
 At this point, we request the annotators to mark the full table instead of one or two characteristics.
 This is because we will only use text extracted from PDFs to train the machine learning model that could predict on text and the not the PDF (like RobotReviewer).
-Apart from the table, there could be text description that could hint towards baseline differences that could act as confounding factors.
+Tables extracted from PDFs lose the inherent table structure. 
+Therefore, it will be difficult to use the extracted table text to train the machine learning models. 
+If the table for baseline patient characteristics show excessive similarity or dissimilarity in the baseline characteristics that ARE NOT compatible with chance then mark the full table and table caption with the label ``1.3 Yes Bad'' otherwise mark the full table and the table caption with the label ``1.3 No Good''.
+If you did not find any table describing the baseline patient characteristics then the RCT study will be ultimately assumed as ``1.3 No Information'' for this SQ.
+In some cases, this table is missing, but there could be text description that could hint towards baseline differences that could act as confounding factors.
 For instance, consider the following sentence, ``Because baseline ODI differences were a potential confounding factor, an adjusted multiple linear and logistic regression analysis was performed for each continuous and categorical outcome measure, respectively.'' (Cohen, Steven P., et al. "Randomized placebo-controlled study evaluating lateral branch radiofrequency denervation for sacroiliac joint pain." The Journal of the American Society of Anesthesiologists 109.2 (2008): 279-288.)
-
-
+If you find any such information in the full-text mark it with the label ``1.3 No Information'' .
 %
 %
 %
