generic explanation of what risk domain 2 assess is detailed

--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -439,3 +439,15 @@
   year={2020},
   publisher={Springer}
 }
+
+
+@article{cohen2008randomized,
+  title={Randomized placebo-controlled study evaluating lateral branch radiofrequency denervation for sacroiliac joint pain},
+  author={Cohen, Steven P and Hurley, Robert W and Buckenmaier, Chester C and Kurihara, Connie and Morlando, Benny and Dragovich, Anthony},
+  journal={The Journal of the American Society of Anesthesiologists},
+  volume={109},
+  number={2},
+  pages={279--288},
+  year={2008},
+  publisher={The American Society of Anesthesiologists}
+}
