--- a/sn-article.tex
+++ b/sn-article.tex
@@ -57,6 +57,9 @@
 \usepackage{algorithmicx}%
 \usepackage{algpseudocode}%
 \usepackage{listings}%
+\bibliography{sn-bibliography.bib}
+%\usepackage{biblatex}
+%\addbibresource{sn-bibliography.bib}
 %%%%
 
 %%%%%=============================================================================%%%%
@@ -195,7 +198,6 @@ Notice that for this signalling question, too, the annotators are required to ma
 %
 \subsection*{Signalling question: 1.3}
 %
-
 The signalling question ``Did baseline differences between intervention groups suggest a problem with the randomization process?'' of the RoB 2 tool is related to the potential for bias arising from differences in baseline characteristics between intervention groups that are not related to chance and may suggest a problem with the randomization process.
 Even with good randomization, chance imbalances in baseline characteristics can occur leading to an ineffective randomization.
 For example, if the intervention group has significantly more female participants, older participants, or participants with more severe disease at baseline compared to the control group, this may suggest that the randomization process was not effective or that there was a problem with the allocation sequence.
@@ -216,15 +218,13 @@ If there are significant differences in baseline characteristics between interve
 %
 %
 Follow the Flowchart~\ref{fig:1_3} for annotation instructions of the signalling question, ``Did baseline differences between intervention groups suggest a problem with the randomization process?''.
-The text describing answer to this question is typically found in the table describing demographic and clinical baseline characteristics of study participants.
-At this point, we request the annotators to mark the full table instead of one or two characteristics.
-This is because we will only use text extracted from PDFs to train the machine learning model that could predict on text and the not the PDF (like RobotReviewer).
-Tables extracted from PDFs lose the inherent table structure. 
+Look for the answer in the table describing demographic and clinical baseline characteristics of study participants. 
+At this point, we request the annotators to mark the full table instead of one or two characteristics, as extracted table text from PDFs lacks the inherent structure necessary for training machine learning models.
 Therefore, it will be difficult to use the extracted table text to train the machine learning models. 
 If the table for baseline patient characteristics show excessive similarity or dissimilarity in the baseline characteristics that ARE NOT compatible with chance then mark the full table and table caption with the label ``1.3 Yes Bad'' otherwise mark the full table and the table caption with the label ``1.3 No Good''.
 If you did not find any table describing the baseline patient characteristics then the RCT study will be ultimately assumed as ``1.3 No Information'' for this SQ.
 In some cases, this table is missing, but there could be text description that could hint towards baseline differences that could act as confounding factors.
-For instance, consider the following sentence, ``Because baseline ODI differences were a potential confounding factor, an adjusted multiple linear and logistic regression analysis was performed for each continuous and categorical outcome measure, respectively.'' (Cohen, Steven P., et al. "Randomized placebo-controlled study evaluating lateral branch radiofrequency denervation for sacroiliac joint pain." The Journal of the American Society of Anesthesiologists 109.2 (2008): 279-288.)
+For instance, consider the following sentence, ``Because baseline ODI differences were a potential confounding factor, an adjusted multiple linear and logistic regression analysis was performed for each continuous and categorical outcome measure, respectively.''%~\citep{cohen2008randomized}
 If you find any such information in the full-text mark it with the label ``1.3 No Information'' .
 %
 %
@@ -232,7 +232,10 @@ If you find any such information in the full-text mark it with the label ``1.3 N
 \section*{Annotation Guidelines for RoB domain 2}
 \label{sec:dom2}
 %
-Before detailing annotation instructions for this domain, we clarify the difference between deviations from intended interventions and dropouts from the trial.
+The second risk domain of RoB 2 tool assess the risk of bias due to deviations from the intended interventions specifically focusing on the effect of assigned intervention.
+In clinical trials, it is essential to ensure that participants in a study are assigned to the intended interventions accurately and that the interventions are administered as planned.
+However, there can be deviations or departures from the intended interventions, which may introduce bias and affect the reliability and validity of the study results.
+Before detailing the annotation instructions for signalling questions for this domain, we clarify the difference between deviations from intended interventions and dropouts from the trial.
 Deviations from intended interventions are any unintentional changes that could have occurred in the intervention under investigation in the trial.
 For example, participants may not have complied with the study protocol, or there might have been problems with the delivery of the intervention that could have influenced the study outcomes.
 In contrast, dropouts refer to participants who withdrew from the study or were lost to follow-up.
@@ -536,8 +539,8 @@ Could measurement or ascertainment of the outcome have differed between interven
 %% by copying the reference list from your .bbl file, paste it into the main manuscript .tex %%
 %% file, and delete the associated \verb+\bibliography+ commands.                            %%
 %%===========================================================================================%%
-
-\bibliography{sn-bibliography.bib}% common bib file
+%\bibliographystyle{}
+\bibliography{sn-bibliography.bib} % common bib file
 %% if required, the content of the .bbl file can be included here once bbl is generated
 %%\input sn-article.bbl
 
